# github-activity-cli

./: README.md  pyproject.toml
gactivity/: __main__.py  activity.py
github-activity-cli/: script.py
tests/: test_github_activity.py  test_models.py
