[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "githubactivity"
version = "1.0.0"
dependencies=["aiohttp>=3.11.18"]
authors=[{name = "elcbi",email = "sebastian.gcruz64@gmail.com"}]
license="MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["License :: OSI Approved :: MIT License"]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
gactivity = "gactivity.__main__:main"

[tool.setuptools.packages.find]
where = ["."]