[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "github-user-activity-cli"
description = "Simple project for educational purposes"
version = "1.0.1"
dependencies=["aiohttp>=3.11.18"]
authors=[{name = "elcbi",email = "sebastian.gcruz64@gmail.com"}]
license="MIT"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
Repository = "https://github.com/sebastiancruzg/github-activity-cli"

[project.optional-dependencies]
dev = ["build", "twine"]

[project.scripts]
gactivity = "gactivity.__main__:main"

[tool.setuptools.packages.find]
where = ["."]